fix ors + units + examples